[package]
name = "signals-im"
version = "0.1.0"
authors = ["Keaton Brandt <keaton.brandt@gmail.com>"]
edition = "2018"

[dependencies]
futures-signals = "0.3.15"
im = "15.0.0"
futures = "0.3.8"
futures-util = "0.3.8"
parking_lot = "0.11.1"
pin-project = "1.0.2"
futures-executor = "0.3.8"
pin-utils = "0.1.0"

